// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatMessage /> renders correctly message 1`] = `
<div
  className="ChatMessage-messageWrapper-74 ChatMessage-messageWrapperFromMe-75"
>
  <div
    className="MuiAvatar-root-82 MuiAvatar-colorDefault-83"
    style={
      Object {
        "backgroundColor": "#8bc34a",
      }
    }
  >
    T
  </div>
  <div
    className="MuiPaper-root-85 MuiPaper-elevation2-89 MuiPaper-rounded-86 ChatMessage-message-76 ChatMessage-messageFromMe-77"
  >
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122"
      style={
        Object {
          "color": "#8bc34a",
        }
      }
    >
      test
    </span>
    <pre
      className="MuiTypography-root-112 MuiTypography-body1-121 ChatMessage-content-80"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122 ChatMessage-time-81"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders message from other users 1`] = `
<div
  className="ChatMessage-messageWrapper-74"
>
  <div
    className="MuiAvatar-root-82 MuiAvatar-colorDefault-83"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    S
  </div>
  <div
    className="MuiPaper-root-85 MuiPaper-elevation2-89 MuiPaper-rounded-86 ChatMessage-message-76"
  >
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      someone
    </span>
    <pre
      className="MuiTypography-root-112 MuiTypography-body1-121 ChatMessage-content-80"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122 ChatMessage-time-81"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name in status message correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-74"
>
  <div
    className="ChatMessage-statusMessage-78"
  >
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122 ChatMessage-statusMessageUser-79"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    test message
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122"
    >
      2 days ago
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name of other users correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-74"
>
  <div
    className="MuiAvatar-root-82 MuiAvatar-colorDefault-83"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-85 MuiPaper-elevation2-89 MuiPaper-rounded-86 ChatMessage-message-76"
  >
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    <pre
      className="MuiTypography-root-112 MuiTypography-body1-121 ChatMessage-content-80"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122 ChatMessage-time-81"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name of user correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-74"
>
  <div
    className="MuiAvatar-root-82 MuiAvatar-colorDefault-83"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-85 MuiPaper-elevation2-89 MuiPaper-rounded-86 ChatMessage-message-76"
  >
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    <pre
      className="MuiTypography-root-112 MuiTypography-body1-121 ChatMessage-content-80"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122 ChatMessage-time-81"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders status message 1`] = `
<div
  className="ChatMessage-messageWrapper-74"
>
  <div
    className="ChatMessage-statusMessage-78"
  >
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122 ChatMessage-statusMessageUser-79"
      style={
        Object {
          "color": "#8bc34a",
        }
      }
    >
      test
    </span>
    test message
    <span
      className="MuiTypography-root-112 MuiTypography-caption-122"
    >
      2 days ago
    </span>
  </div>
</div>
`;
